Fix Responsive for some devices

--- a/Pages/Login.html
+++ b/Pages/Login.html
@@ -61,6 +61,6 @@
            
 
 
-    <script src="/Assets/js/mainLogin.js"></script>
+    <script src="../Assets/js/mainLogin.js"></script>
 </body>
 </html>
