add page houses and sign page house

--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
                 <div class="card" >
                     <h2 class="title">Une location simplifiée                    </h2>
                     <p class="bodyText">Parcourez les annonces de la plus haute qualité, postulez en ligne, signez votre bail et payez même votre loyer depuis n'importe quel appareil.</p>
-                    <a href="./Pages/Auth/Login.html">Voir Plus</a>
+                    <a href="./Pages/Houses.html">Voir Plus</a>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
                     <p class="bodyText">Trouvez un prêteur qui peut offrir des taux hypothécaires compétitifs et vous aider avec l'approbation préalable. <br>
                         Obtenez une pré-approbation maintenant
                         Divulgation publicitaire</p>
-                    <a href="./Pages/Auth/Login.html">Voir Plus</a>
+                    <a href="./Pages/Houses.html">Voir Plus</a>
                     
                 </div>
             </div>
@@ -91,7 +91,7 @@
                     <p class="bodyText">
                         Acceptez les demandes, traitez les paiements de loyer en ligne et signez des baux numériques, le tout sur une seule plateforme.
                     </p>
-                    <a href="./Pages/Auth/Login.html">Voir notre offres</a>
+                    <a href="./Pages/Houses.html">Voir notre offres</a>
                 </div>
             </div>
         </div>
@@ -107,7 +107,7 @@
                     <p class="bodyText">
                         Connectez-vous avec plus de 75 millions de locataires à la recherche de nouvelles maisons à l'aide de notre plateforme de marketing complète.
                     </p>
-                    <a href="./Pages/Auth/Login.html">Voir Plus</a>
+                    <a href="./Pages/Houses.html">Voir Plus</a>
                 </div>
             </div>
         </div>
