--- a/Pages/Houses.html
+++ b/Pages/Houses.html
@@ -52,6 +52,7 @@
     Filter
   </div>
   <div id="filter" class="filter">
+    <div class="closeIcon">X</div>
     <form action="post">
         <input type="text" name="city" placeholder="Ville"  id="incity">
         <div class="inputs d-flex justify-content-around">
@@ -71,7 +72,7 @@
         <div class="card" style="width: 20rem;">
             <img class="card-img-top" src="../Assets/images/Houses/medium.jpg" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">el oualfa haj fateh</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
@@ -80,7 +81,7 @@
         <div class="card my-2" style="width: 20rem;">
         <img class="card-img-top" src="../Assets/images/Houses/flat.webp" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Bd anfa rue algerie</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
@@ -90,7 +91,7 @@
         <div class="card my-2" style="width: 20rem;">
             <img class="card-img-top" src="../Assets/images/Houses/jatdin.png" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">15 rue tunise</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
@@ -100,7 +101,7 @@
         <div class="card my-2" style="width: 20rem;">
             <img class="card-img-top" src="../Assets/images/Houses/straint.jpg" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">oualfa azhari</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
@@ -108,9 +109,39 @@
     </a>
     <a style="text-decoration: none; color:#1c1c1c;" href="">
         <div class="card my-2" style="width: 20rem;">
-            <img class="card-img-top" src="../Assets/images/Houses/medium.jpg" alt="Card image cap">
+            <img class="card-img-top" src="../Assets/images/Houses/badroom.jpg" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Sanya raml el Rahma</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+    </a>
+    <a style="text-decoration: none; color:#1c1c1c;" href="">
+        <div class="card my-2" style="width: 20rem;">
+            <img class="card-img-top" src="../Assets/images/Houses/kitchen.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Apartement hay matar el jadida</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+    </a>
+    <a style="text-decoration: none; color:#1c1c1c;" href="">
+        <div class="card my-2" style="width: 20rem;">
+            <img class="card-img-top" src="../Assets/images/Houses/safa.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Studio Najd el jadida</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+    </a>
+    <a style="text-decoration: none; color:#1c1c1c;" href="">
+        <div class="card my-2" style="width: 20rem;">
+            <img class="card-img-top" src="../Assets/images/Houses/eatingroom.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Chambre rue massira el jadida</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
