--- a/Pages/House.html
+++ b/Pages/House.html
@@ -84,6 +84,7 @@
                         <a href="">(45 reviews)</a>
                     </span>
                 </div>
+
             </div>
             <div class="demandCard">
                 <h3 >Contact This Property</h3>
@@ -158,6 +159,14 @@
                 </div>
             </div>
         </div>
+        <div class="aboutAppart">
+            <h3 class="title">About Presidential Towers</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi neque delectus placeat, illum odio commodi similique, eaque quis optio rerum inventore libero, nostrum officia? Ratione consequuntur aliquam animi doloribus voluptas. <br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis obcaecati rerum harum tempora, nisi mollitia officiis sint dolorum eligendi corporis, iure nihil praesentium quo eum alias numquam quia magni excepturi? <br>
+                - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus dolore eaque totam reprehenderit deleniti eos, delectus non porro, reiciendis perspiciatis ipsa ipsum id, officiis optio aliquam voluptate quas omnis.
+            </p>
+        </div>
+        <div class="pictures"></div>
     </div>
 </div>
 
