--- a/Pages/House.html
+++ b/Pages/House.html
@@ -22,7 +22,7 @@
 <body>
   <!-- <?php include "./Components/Nav.php" ?> -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light nav-home px-5">
+    <nav style="width: 100%;" class="navbar navbar-expand-lg navbar-light bg-light nav-home px-5">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -66,7 +66,7 @@
         <div class="hedearMain">
             <div class="header">
                 <div class="title">
-                    <h1>Oualfa Azhari</h1>
+                    <h1>Appartement Oualfa Azhari</h1>
                     <span class="adrs">555 W Madison St, Chicago, IL 60661  <span class="city">El Jadida</span></span>
                     <div class="price"><span>Price : </span> 1555 $</div>
                 </div>
@@ -86,7 +86,7 @@
                 </div>
 
             </div>
-            <div class="demandCard">
+            <div id="demandCard" class="demandCard">
                 <h3 >Contact This Property</h3>
                 <button class="demand">Demande Tour</button>
                 <button class="sendMsg">Send Message</button>
@@ -160,10 +160,10 @@
             </div>
         </div>
         <div class="aboutAppart">
-            <h3 class="title">About Presidential Towers</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi neque delectus placeat, illum odio commodi similique, eaque quis optio rerum inventore libero, nostrum officia? Ratione consequuntur aliquam animi doloribus voluptas. <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis obcaecati rerum harum tempora, nisi mollitia officiis sint dolorum eligendi corporis, iure nihil praesentium quo eum alias numquam quia magni excepturi? <br>
-                - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus dolore eaque totam reprehenderit deleniti eos, delectus non porro, reiciendis perspiciatis ipsa ipsum id, officiis optio aliquam voluptate quas omnis.
+            <h3 class="title">About Appartement Oualfa Azhari</h3>
+            <p>
+                Lake Meadows is a 70-acre lakefront community in the Bronzeville neighborhood on Chicago’s South Side that includes four high-rise residential buildings, five mid-rise residential buildings and a 170,000+ square foot shopping center.
+                Lake Meadows is a 70-acre lakefront community in the Bronzeville neighborhood on Chicago’s South Side that includes four high-rise residential buildings, five mid-rise residential buildings and a 170,000+ square foot shopping center. Offering a nice blend of size and value, floor plans at Lake Meadows include studios, one-, two- and three-bedrooms. All units offer city and park views, spacious closets, and utility packages. In select units, there are upgraded kitchens and baths, as well as a balcony.There are acres of scenic parks throughout Lake Meadows to walk through, tennis courts, a bark park and a clubhouse also to enjoy. The Bronzeville-IIT Red and Green Line CTA train station is also nearby giving residents quick access to go anywhere in Chicago.
             </p>
         </div>
         <div class="pictures"></div>
@@ -176,6 +176,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="../Assets/js/Houses.js"></script>
+    <script src="../Assets/js/House.js"></script>
 </body>
 </html>
