Create Version Laravel

--- a/Admin/pages/forms/general.html
+++ b/Admin/pages/forms/general.html
@@ -1019,9 +1019,17 @@
                   </div>
                   <!-- /.col-lg-6 -->
                   <div class="col-lg-6">
+                    
+                    
                     <div class="input-group">
                       <div class="input-group-prepend">
-                        <span class="input-group-text"><input type="radio"></span>
+                        <span class="input-group-text"><input name="type" type="radio"></span>
+                      </div>
+                      <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"><input name="type" type="radio"></span>
                       </div>
                       <input type="text" class="form-control">
                     </div>
