--- a/Pages/AddPost.html
+++ b/Pages/AddPost.html
@@ -35,21 +35,7 @@
         <div class="card-body row">
           <div class="col-6 text-center d-flex justify-content-center">
             <div class="">
-                <h2 class="title text-secondary font-">Appartement a casablanca boulvard Anfa</h2>
-                <div class="imgs d-flex">
-                  <img src="../Assets/images/download.png" alt="">
-                  <img src="../Assets/images/download.png" alt="">
-                  <img src="../Assets/images/download.png" alt="">
-                  <img src="../Assets/images/download.png" alt="">
-                </div>
-                <div class="d-flex center justify-content-center d-none" >
-                    <span class="precedent">&lt;</span>
-                    <img class="m-1" src="../Assets/images/Houses/eatingroom.jpg" width="150px" alt="" srcset="">
-                    <img class="m-1" src="../Assets/images/Houses/eatingroom.jpg" width="150px" alt="" srcset="">
-                    <img class="m-1 " src="../Assets/images/Houses/eatingroom.jpg" width="150px" alt="" srcset="">
-                    <img class="m-1 d-none" src="../Assets/images/Houses/eatingroom.jpg" width="150px" alt="" srcset="">
-                  <span class="next">&gt;</span>  
-                </div>
+                
             </div>
           </div>
           <div class="col-6">
@@ -85,13 +71,13 @@
                     <div class="input-group-prepend">
                     <span class="input-group-text"><input id="rent" name="type" type="radio"></span>
                     </div>
-                    <label type="text" for="rent"  class="form-control bg-light">Loyer mensuel</label>
+                    <label type="text" for="rent"  class="form-control bg-light">mensuel</label>
                 </div>
                 <div class="input-group mx-1">
                     <div class="input-group-prepend">
                     <span class="input-group-text"><input id="rentdaily" name="type" type="radio"></span>
                     </div>
-                    <label type="text" for="rentdaily"  class="form-control bg-light">Loyer journée</label>
+                    <label type="text" for="rentdaily"  class="form-control bg-light">journée</label>
                 </div>
                 <div class="input-group mx-1">
                     <div class="input-group-prepend">
